--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -23,77 +23,54 @@
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
             padding: 2rem; /* Increased padding */
             width: 100%;
-            max-width: 800px; /* Increased max-width for new sections */
+            max-width: 600px; /* Max width from screenshot */
             text-align: center; /* Center align content */
         }
-        /* Style for the drill links */
+        /* Style for the drill containers */
+        .drill-item {
+            display: flex; /* Use flexbox to align link and status */
+            justify-content: space-between; /* Space out link and status */
+            align-items: center; /* Vertically align content */
+            background-color: #e2f0ff; /* Light blue background */
+            padding: 1rem; /* Padding inside item */
+            margin-bottom: 0.75rem; /* Space between items */
+            border-radius: 0.5rem; /* Rounded corners */
+            border: 1px solid #b3d4ff; /* Subtle border */
+        }
+        /* Style for the drill links within the container */
         .drill-link {
-            display: block; /* Make links block for better click area */
-            background-color: #e2f0ff; /* Light blue background for links */
+            flex-grow: 1; /* Allow link to take available space */
+            text-align: left; /* Align link text to the left */
             color: #0056b3; /* Darker blue text color */
-            padding: 1rem; /* Padding inside links */
-            margin-bottom: 0.75rem; /* Space between links */
-            border-radius: 0.5rem; /* Rounded corners for links */
             text-decoration: none; /* Remove underline */
             font-size: 1.1rem; /* Slightly larger font size */
             font-weight: 600; /* Semi-bold font */
-            transition: background-color 0.2s ease, transform 0.1s ease; /* Smooth hover effect */
-            border: 1px solid #b3d4ff; /* Subtle border */
+             /* Remove default block/padding from previous version */
+             display: inline;
+             padding: 0;
+             margin: 0;
         }
-        .drill-link:hover {
+        .drill-item:hover {
             background-color: #cce0ff; /* Lighter blue on hover */
-            transform: translateY(-2px); /* Slight lift effect */
+             cursor: pointer; /* Indicate it's clickable */
         }
-         .drill-link:active {
+         .drill-item:active {
             transform: translateY(0); /* Press down effect */
         }
+
+        /* Style for status/score text */
+        .drill-status {
+            font-size: 0.9rem;
+            color: #4a5568; /* Gray text */
+            margin-left: 1rem; /* Space between link and status */
+             flex-shrink: 0; /* Prevent status from shrinking */
+        }
+
         /* Add a logo or image */
         .logo {
             max-width: 150px; /* Adjust size as needed */
             margin: 0 auto 1.5rem auto; /* Center and add space below */
         }
-
-        /* Styles for the new sections */
-        .dashboard-section {
-            margin-top: 2rem;
-            padding-top: 1.5rem;
-            border-top: 1px solid #e5e7eb;
-            text-align: left;
-        }
-
-        .dashboard-section h2 {
-            text-align: center;
-            font-size: 1.8rem;
-            font-weight: bold;
-            color: #4a5568;
-            margin-bottom: 1.5rem;
-        }
-
-         .performance-item {
-             background-color: #f9fafb;
-             border: 1px solid #e5e7eb;
-             border-radius: 0.375rem;
-             padding: 0.75rem;
-             margin-bottom: 0.5rem;
-             display: flex;
-             justify-content: space-between;
-             align-items: center;
-             font-size: 1rem;
-         }
-
-         .reflection-item {
-             background-color: #f9fafb;
-             border: 1px solid #e5e7eb;
-             border-radius: 0.375rem;
-             padding: 1rem;
-             margin-bottom: 0.75rem;
-         }
-
-         .reflection-item strong {
-             display: block;
-             margin-bottom: 0.5rem;
-             color: #2d3748;
-         }
     </style>
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -111,70 +88,15 @@
             <input type="text" id="student-name" name="student-name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-base" placeholder="Enter your name">
         </div>
 
-
-        <div class="space-y-3">
-            <a href="qr index 1.html" class="drill-link">Timed QR Drill 1</a>
-
-            <a href="qr index 2.html" class="drill-link">Timed QR Drill 2</a>
-
-            <a href="qr index 3.html" class="drill-link">Timed QR Drill 3</a>
-
-             <a href="qr index 4.html" class="drill-link">Timed QR Drill 4</a>
-
-             <a href="qr index 5.html" class="drill-link">Timed QR Drill 5</a>
-
-             <a href="qr index 6.html" class="drill-link">Timed QR Drill 6</a>
-
-        </div>
-
-        <div id="overall-performance-section" class="dashboard-section">
-            <h2>Overall Performance</h2>
-            <div id="performance-list">
-                <div class="performance-item">
-                    <span>Timed QR Drill 1:</span>
-                    <span>Score: - / - Time: -</span>
-                </div>
-                 <div class="performance-item">
-                    <span>Timed QR Drill 2:</span>
-                    <span>Score: - / - Time: -</span>
-                </div>
-                <div class="performance-item">
-                    <span>Timed QR Drill 6:</span>
-                    <span>Score: - / - Time: -</span>
-                </div>
+        <div id="drills-list" class="space-y-3">
             </div>
-        </div>
-
-        <div id="personal-reflections-section" class="dashboard-section">
-             <h2>Personal Reflections</h2>
-             <div id="reflections-list">
-                 <div class="reflection-item">
-                     <strong>Timed QR Drill 1 Reflection:</strong>
-                     <p>No reflection recorded yet.</p>
-                      <strong>Focus Rating:</strong>
-                      <p>N/A</p>
-                 </div>
-                  <div class="reflection-item">
-                     <strong>Timed QR Drill 2 Reflection:</strong>
-                     <p>No reflection recorded yet.</p>
-                      <strong>Focus Rating:</strong>
-                      <p>N/A</p>
-                 </div>
-                 <div class="reflection-item">
-                     <strong>Timed QR Drill 6 Reflection:</strong>
-                     <p>No reflection recorded yet.</p>
-                      <strong>Focus Rating:</strong>
-                      <p>N/A</p>
-                 </div>
-             </div>
-         </div>
 
     </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const studentNameInput = document.getElementById('student-name');
-            const performanceList = document.getElementById('performance-list');
-            const reflectionsList = document.getElementById('reflections-list');
+            const drillsList = document.getElementById('drills-list');
 
             // --- Student Name Logic ---
 
@@ -189,70 +111,64 @@
                 localStorage.setItem('studentName', event.target.value);
             });
 
-            // --- Load and Display Drill Results and Reflections ---
+            // --- Load and Display Drill Status and Score ---
 
-            // Define the list of drills and the localStorage keys for their data
-            // Ensure these keys match exactly what your qr index files use to save data.
+            // Define the list of drills and the localStorage keys for their results.
+            // Ensure these keys match exactly what your qr index files use to save results.
             const drills = [
-                { name: 'Timed QR Drill 1', resultsKey: 'qrDrill1Results', reflectionKey: 'qrDrill1Reflection', focusKey: 'qrDrill1FocusRating' },
-                { name: 'Timed QR Drill 2', resultsKey: 'qrDrill2Results', reflectionKey: 'qrDrill2Reflection', focusKey: 'qrDrill2FocusRating' },
-                { name: 'Timed QR Drill 3', resultsKey: 'qrDrill3Results', reflectionKey: 'qrDrill3Reflection', focusKey: 'qrDrill3FocusRating' },
-                { name: 'Timed QR Drill 4', resultsKey: 'qrDrill4Results', reflectionKey: 'qrDrill4Reflection', focusKey: 'qrDrill4FocusRating' },
-                { name: 'Timed QR Drill 5', resultsKey: 'qrDrill5Results', reflectionKey: 'qrDrill5Reflection', focusKey: 'qrDrill5FocusRating' },
-                { name: 'Timed QR Drill 6', resultsKey: 'qrDrill6Results', reflectionKey: 'qrDrill6Reflection', focusKey: 'qrDrill6FocusRating' },
+                { id: 'qrDrill1', name: 'Timed QR Drill 1', file: 'qr index 1.html', resultsKey: 'qrDrill1Results' },
+                { id: 'qrDrill2', name: 'Timed QR Drill 2', file: 'qr index 2.html', resultsKey: 'qrDrill2Results' },
+                { id: 'qrDrill3', name: 'Timed QR Drill 3', file: 'qr index 3.html', resultsKey: 'qrDrill3Results' },
+                { id: 'qrDrill4', name: 'Timed QR Drill 4', file: 'qr index 4.html', resultsKey: 'qrDrill4Results' },
+                { id: 'qrDrill5', name: 'Timed QR Drill 5', file: 'qr index 5.html', resultsKey: 'qrDrill5Results' },
+                { id: 'qrDrill6', name: 'Timed QR Drill 6', file: 'qr index 6.html', resultsKey: 'qrDrill6Results' },
                 // Add more drills here following the same pattern
             ];
 
-            // Clear initial placeholder content
-            performanceList.innerHTML = '';
-            reflectionsList.innerHTML = '';
+            // Clear any static content and dynamically load drills
+            drillsList.innerHTML = '';
 
             drills.forEach(drill => {
-                // --- Performance Display ---
+                const drillItem = document.createElement('div');
+                drillItem.classList.add('drill-item');
+                drillItem.dataset.drillId = drill.id; // Add data attribute to identify the drill
+
+                const drillLink = document.createElement('a');
+                drillLink.href = drill.file;
+                drillLink.classList.add('drill-link');
+                drillLink.textContent = drill.name;
+
+                const drillStatusSpan = document.createElement('span');
+                drillStatusSpan.classList.add('drill-status');
+
+                // Check localStorage for results
                 const resultsData = localStorage.getItem(drill.resultsKey);
-                const performanceItem = document.createElement('div');
-                performanceItem.classList.add('performance-item');
 
                 if (resultsData) {
                     try {
                         const results = JSON.parse(resultsData);
-                        // Assuming results object has score, totalQuestions, and timeTaken (string like "X min YY sec")
-                        performanceItem.innerHTML = `
-                            <span>${drill.name}:</span>
-                            <span>Score: ${results.score} / ${results.totalQuestions} Time: ${results.timeTaken}</span>
-                        `;
+                        // Assuming results object has score and totalQuestions
+                        drillStatusSpan.textContent = `Completed: Score ${results.score} / ${results.totalQuestions}`;
                     } catch (e) {
                         console.error(`Error parsing results for ${drill.name}:`, e);
-                        performanceItem.innerHTML = `
-                            <span>${drill.name}:</span>
-                            <span>Error loading data</span>
-                        `;
+                        drillStatusSpan.textContent = `Completed (Error loading score)`;
                     }
                 } else {
-                    performanceItem.innerHTML = `
-                        <span>${drill.name}:</span>
-                        <span>Not completed yet</span>
-                    `;
+                    drillStatusSpan.textContent = 'Incompleted';
                 }
-                performanceList.appendChild(performanceItem);
 
-                // --- Reflections Display ---
-                const reflectionTextData = localStorage.getItem(drill.reflectionKey);
-                const focusRatingData = localStorage.getItem(drill.focusKey);
+                drillItem.appendChild(drillLink);
+                drillItem.appendChild(drillStatusSpan);
 
-                const reflectionItem = document.createElement('div');
-                reflectionItem.classList.add('reflection-item');
+                drillsList.appendChild(drillItem);
 
-                reflectionItem.innerHTML = `
-                    <strong>${drill.name} Reflection:</strong>
-                    <p>${reflectionTextData || 'No reflection recorded yet.'}</p>
-                    <strong>Focus Rating:</strong>
-                    <p>${focusRatingData || 'N/A'}</p>
-                `;
-                 reflectionsList.appendChild(reflectionItem);
-
+                // Add event listener to the drill item container to make the whole area clickable
+                drillItem.addEventListener('click', () => {
+                    window.location.href = drill.file; // Navigate to the drill page
+                });
             });
         });
     </script>
+
 </body>
 </html>
