--- a/qr index 1.html
+++ b/qr index 1.html
@@ -517,19 +517,10 @@
             <p class="text-sm text-gray-500 mb-4 flex-shrink-0">Click on a question box below to review it.</p>
             <div id="results-details-grid" class="overflow-y-auto flex-grow"></div>
             <div class="mt-6 flex-shrink-0 border-t pt-4">
-                 <div class="mb-4">
-                    <label for="focus-rating" class="block text-md font-semibold text-gray-700 mb-1">My focus out of 5 (1 very low, 5 very high):</label>
-                    <input type="number" id="focus-rating" name="focus-rating" min="1" max="5" class="mt-1 block w-20 px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm" placeholder="1-5">
                  </div>
-                 <div>
-                    <label for="reflection-text" class="block text-md font-semibold text-gray-700 mb-1">Main takeaway from this practice:</label>
-                    <textarea id="reflection-text" name="reflection-text" rows="3" class="block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm" placeholder="Reflect on your performance, strategies, or areas for improvement..."></textarea>
-                 </div>
-            </div>
               <div class="mt-6 text-center flex-shrink-0 flex justify-center space-x-4">
                 <button onclick="window.location.reload()" class="secondary-button px-6 py-2">Try Again</button>
-                <button id="download-pdf-button" class="primary-button px-6 py-2">Download Results PDF</button>
-            </div>
+                </div>
              <div class="mt-4 text-center flex-shrink-0">
                  <a href="student_dashboard.html" class="secondary-button inline-block px-6 py-2">← Back to Dashboard</a>
             </div>
@@ -624,15 +615,9 @@
         const setupQuestionCountEl = document.getElementById('setup-question-count');
         const setupTimeLimitEl = document.getElementById('setup-time-limit');
         const reviewExplanationContainer = document.getElementById('review-explanation-container');
-        const reflectionText = document.getElementById('reflection-text');
-        const downloadPdfButton = document.getElementById('download-pdf-button');
-        const focusRatingInput = document.getElementById('focus-rating');
-        const calculatorToggleButton = document.getElementById('calculator-toggle-button');
-        const calculatorUI = document.getElementById('calculator-ui');
-        const calcDisplay = document.getElementById('calc-display');
-        const calcButtons = document.querySelectorAll('.calc-button');
-        const closeCalculatorButton = document.getElementById('close-calculator-button');
-        const calculatorDragHeader = document.getElementById('calculator-drag-header');
+        // const reflectionText = document.getElementById('reflection-text'); // Removed
+        // const downloadPdfButton = document.getElementById('download-pdf-button'); // Removed
+        // const focusRatingInput = document.getElementById('focus-rating'); // Removed
 
 
         // --- Functions ---
@@ -690,7 +675,7 @@
         }
 
         function updateFlagButtonAppearance() {
-            const isFlagged = flaggedQuestions[currentQuestionIndex];
+            const isFlagged = flaggedQuestions[currentQuestionIndex]
             flagButton.textContent = isFlagged ? 'Unflag' : 'Flag for Review';
             flagButton.classList.toggle('flagged', isFlagged);
         }
@@ -971,29 +956,26 @@
              });
          }
 
-        // --- Function to save results and reflection to localStorage ---
-        function saveResultsAndReflection() {
+         // --- Function to save only results to localStorage ---
+        function saveDrillResults() {
             const score = scoreEl.textContent;
             const totalQuestions = totalQuestionsResultsEl.textContent;
+            // We don't need to save timeTaken for the dashboard's simplified view,
+            // but keeping it in the results object doesn't hurt if needed elsewhere.
             const timeTaken = timeTakenEl.textContent;
-            const reflection = reflectionText.value.trim();
-            const focusRating = focusRatingInput.value;
 
-            // Save results data
+
+            // Data to save: score and total questions
             const resultsData = {
                 score: score,
                 totalQuestions: totalQuestions,
-                timeTaken: timeTaken
+                timeTaken: timeTaken // Still saving time just in case, but not used on dashboard
             };
-            // Using a specific key for Drill 1 results
+
+            // Save results data using the specific key for Drill 1
             localStorage.setItem('qrDrill1Results', JSON.stringify(resultsData));
 
-            // Save reflection data
-            // Using specific keys for Drill 1 reflection and focus rating
-            localStorage.setItem('qrDrill1Reflection', reflection);
-            localStorage.setItem('qrDrill1FocusRating', focusRating);
-
-            console.log("Drill 1 Results and Reflection Saved:", resultsData, reflection, focusRating);
+            console.log("Drill 1 Results Saved:", resultsData);
         }
 
 
@@ -1002,8 +984,8 @@
             recordTimeSpent(currentQuestionIndex);
             stopTimer();
 
-            // --- Save results and reflection before showing the screen ---
-            saveResultsAndReflection();
+            // --- Save results before showing the screen ---
+            saveDrillResults();
             // -------------------------------------------------------------
 
             practiceSessionScreen.classList.add('hidden');
@@ -1062,12 +1044,7 @@
             const timeDiff = practiceSessionEndTime - practiceSessionStartTime;
             timeTakenEl.textContent = formatTimeDifference(timeDiff);
 
-            // Pre-fill reflection and focus rating fields on the results screen if saved (optional, but helpful)
-             const savedReflection = localStorage.getItem('qrDrill1Reflection');
-             const savedFocus = localStorage.getItem('qrDrill1FocusRating');
-             if (reflectionText && savedReflection !== null) reflectionText.value = savedReflection;
-             if (focusRatingInput && savedFocus !== null) focusRatingInput.value = savedFocus;
-
+            // Removed pre-filling reflection and focus rating fields
         }
 
 
@@ -1089,71 +1066,12 @@
              showReviewScreen();
          }
 
+        // Removed generatePDF as it's not needed without reflection/focus fields
+        /*
         function generatePDF() {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF();
-            const reflection = reflectionText.value.trim();
-            const focusRating = focusRatingInput.value;
-            const finalScore = scoreEl.textContent;
-            const totalQs = totalQuestionsResultsEl.textContent;
-            const timeTaken = timeTakenEl.textContent;
-            let y = 15;
-            const lineHeight = 7;
-            const pageHeight = doc.internal.pageSize.height;
-            const margin = 15;
-
-            doc.setFontSize(18);
-            doc.text("UCAT Quantitative Reasoning Results", margin, y);
-            y += lineHeight * 1.5;
-            doc.setFontSize(12);
-            // Assuming you want the student name from the dashboard here - it would need to be passed or saved
-            // For now, using a placeholder or the saved name if available (need dashboard integration)
-            const studentName = localStorage.getItem('studentName') || 'N/A'; // Retrieve saved name from dashboard
-            doc.text(`Name: ${studentName}`, margin, y); y += lineHeight;
-
-            // The goal and focus area might also be set on the dashboard or setup screen.
-            // If saved to localStorage, you can retrieve them here.
-             const userGoal = localStorage.getItem('qrDrill1Goal') || 'N/A'; // Example key if saved
-             const userFocusArea = localStorage.getItem('qrDrill1FocusArea') || 'N/A'; // Example key if saved
-
-            doc.text(`Goal: ${userGoal} / ${totalQs}`, margin, y); y += lineHeight;
-            doc.text(`Focus Area: ${userFocusArea}`, margin, y); y += lineHeight;
-
-
-            doc.text(`Final Score: ${finalScore} / ${totalQs}`, margin, y); y += lineHeight;
-            doc.text(`Time Taken: ${timeTaken}`, margin, y); y += lineHeight * 1.5;
-            doc.setFontSize(14);
-            doc.text("Focus Rating (1-5):", margin, y); y += lineHeight;
-            doc.setFontSize(10);
-            doc.text(focusRating || 'N/A', margin, y); y += lineHeight * 1.5;
-            doc.setFontSize(14);
-            doc.text("Main Takeaway:", margin, y); y += lineHeight;
-            doc.setFontSize(10);
-            const reflectionLines = doc.splitTextToSize(reflection || 'No reflection provided.', doc.internal.pageSize.width - margin * 2);
-            doc.text(reflectionLines, margin, y);
-            y += reflectionLines.length * (lineHeight * 0.7) + lineHeight;
-            doc.setFontSize(14);
-            doc.text("Detailed Results Summary:", margin, y); y += lineHeight * 1.5;
-            doc.setFontSize(10);
-
-            questions.forEach((qData, index) => {
-                const userAnswer = userAnswers[index];
-                const correctAnswer = qData.correctAnswer;
-                const isCorrect = userAnswer !== null && userAnswer !== undefined && userAnswer === correctAnswer;
-                const status = userAnswer === null || userAnswer === undefined ? "Not Answered" : (isCorrect ? "Correct" : "Incorrect");
-                const timeSpentSec = Math.round((questionTimes[index] || 0) / 1000);
-                const resultText = `Q${index + 1}: Your Ans: ${userAnswer || 'N/A'}, Correct: ${correctAnswer}, Status: ${status}, Time: ${timeSpentSec}s`;
-
-                let textLines = doc.splitTextToSize(resultText, doc.internal.pageSize.width - margin * 2);
-                if (y + (textLines.length * (lineHeight * 0.7)) > pageHeight - margin) {
-                    doc.addPage();
-                    y = margin;
-                }
-                doc.text(textLines, margin, y);
-                y += textLines.length * (lineHeight * 0.7) + (lineHeight*0.3);
-            });
-            doc.save(`ucat_qr_results_${studentName || 'user'}_Drill1.pdf`); // Added Drill1 to filename
+           // PDF generation logic here (as in previous version, but can remove reflection/focus parts)
         }
+        */
 
         // --- Calculator Functions ---
         function updateCalcDisplay() {
@@ -1414,11 +1332,7 @@
             userGoal = goalInput.value.trim();
             userFocusArea = focusAreaInput.value.trim();
 
-            // --- Save Goal and Focus Area to localStorage for this drill ---
-             localStorage.setItem('qrDrill1Goal', userGoal);
-             localStorage.setItem('qrDrill1FocusArea', userFocusArea);
-            // ------------------------------------------------------------
-
+            // Removed saving Goal and Focus Area as they are not used on dashboard in this version
 
             timeLeft = 4 * 60;
             userAnswers = new Array(questions.length).fill(null);
@@ -1455,7 +1369,7 @@
         navigatorModal.addEventListener('click', (event) => { if (event.target === navigatorModal) closeModalButton.click(); });
         flagButton.addEventListener('click', toggleFlag);
         filterFlaggedButton.addEventListener('click', () => { isFilteringFlagged = !isFilteringFlagged; showReviewScreen(isFilteringFlagged); });
-        downloadPdfButton.addEventListener('click', generatePDF);
+        // Removed PDF download button event listener
 
         calculatorToggleButton.addEventListener('click', toggleCalculator);
         closeCalculatorButton.addEventListener('click', toggleCalculator);
